# py_viewer_gemini

./: .gitignore  README.md  README_KOR.md  app.spec  pyproject.toml
.kiro/steering/: project-conventions.md
src/my_app/: clean.py  main.py
tests/: conftest.py  test_main.py
