[project]
name = "py-viewer-gemini"
version = "0.1.0"
description = "A versatile file viewer for PNG, JPG, PDF, and SVG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
py-viewer = "my_app.main:main"
clean = "my_app.clean:clean"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
